# nadeshiko

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  t.sh
nadeshiko/: codegen.py  context.py  helper.py  main.py  node.py  parse.py  token.py  tokenize.py  type.py  utils.py
nadeshiko/cmd/: main.py
nadeshiko/models/: node.py  token.py
test/: control.c  driver.sh  pointer.c  test_driver.sh
