[tool.poetry]
name = "nadeshiko"
version = "0.1.0"
description = ""
authors = ["Manjusaka <me@manjusaka.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
more-itertools = "^10.4.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
